# argent0.github.io

./: .gitignore  .gitmodules  Gemfile  Makefile  about.html  config.rb  custom_helpers.rb  default.nix  index.html  shell.nix  site.cabal  site.cabal.bak  site.nix
about/: about.html
articles/: articles.html
articles/2017-10-04/: exploration.html
articles/2017-10-31/: understanding.html
css/: index.css
data/: personal.json
posts/2014/: sixty-days-of-haskell.html
posts/2021/: pandoc-gsoc.html
posts/2021/slice/hs-slice/: slicing-vectors.html
site/: about.html
site/css/: index.css  index.scss
site/posts/: lorem-ipsum.md
site/posts/2014/: sixty-days-of-haskell.md
site/posts/2021/: pandoc-gsoc.md
site/posts/2021/slice/hs-slice/: CHANGELOG.md  hs-slice.cabal  slicing-vectors.md  stack.yaml
site/posts/2021/slice/hs-slice/app/: Main.lhs  Slice.hs
site/posts/android-mic/: android-mic.md  architecture.odg
site/templates/: base.mustache  index.mustache  index.mustache.bak  post.mustache
source/: index.html.markdown
source/about/: about.html.markdown
source/articles/: articles.html.erb
source/articles/2014-12-10/: _sixty-days-into-haskell.html.markdown
source/articles/2017-10-04/: exploration.html.markdown
source/articles/2017-10-31/: understanding.html.markdown
source/layouts/: article.erb  layout.erb
source/stylesheets/: site.css.scss
src-exe/: Main.hs
stylesheets/: hakyl.default.css  site.css
